correçaõ de conflitos

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 services:
   php:
     build: ./.docker/php
-    container_name: novo-php
+    container_name: adls-php
     entrypoint: ./.docker/entrypoint.sh
     environment:
       - COMPOSER_MEMORY_LIMIT=2G
@@ -15,7 +15,7 @@ services:
       - db
   web:
     build: ./.docker/nginx
-    container_name: novo-web
+    container_name: adls-web
     tty: true
     ports:
       - "90:80"
@@ -29,7 +29,7 @@ services:
   db:
     build: .docker/mysql
     command: --innodb-use-native-aio=0 --default-authentication-plugin=mysql_native_password
-    container_name: novo-db
+    container_name: adls-db
     tty: true
     ports:
       - "3307:3306"
